# meepzorp

./: # === intelligent_pdf_pipeline.py  **Product Requirements Document (PRD)**.md  .coveragerc  .env.example  .gitignore  DEVELOPMENT_TASKS.md  PRD.md  README.md  conftest.py  create-full-project.sh  create-python-files.sh  docker-compose.yml  make-executable.sh  master-create-project.sh  rename-to-meepzorp.sh  reorganize.sh  requirements.txt  setup.py
.github/workflows/: ci.yml
agents/base/: Dockerfile  requirements.txt
agents/common/: __init__.py  auth.py  baml_prompts.py  llm.py  registration.py
agents/creative_director/: conftest.py  pyproject.toml  requirements.txt  setup.py
agents/creative_director/creative_director/capabilities/: creative_strategy.py  story_crafter.py
agents/creative_director/creative_director/tests/: __init__.py
agents/creative_director/tests/: __init__.py  test_agent_collaboration.py  test_agent_collaboration_extended.py  test_no_talent_kid.py
agents/document_processor/: Dockerfile  main.py  requirements.txt
agents/personal/: __init__.py  requirements.txt
agents/task/: DEVELOPMENT_NOTES.md  requirements.txt
baml/: __init__.py
docs/setup/: agent-setup.md  port-configuration.md
meepzorp/: .cursorrules  README.md  docker-compose.yml
meepzorp/agents/: __init__.py
meepzorp/orchestration/: Dockerfile  __init__.py  registry.py  router.py  start.sh  workflows.py
meepzorp/ui/: Dockerfile  (+1 more)
orchestration/: main.py  registry.py  requirements.txt  router.py  workflows.py
registry_service/: Dockerfile  main.py  requirements.txt
(+79 files in other folders)
