[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "creative_director"
version = "0.1.0"
authors = [
    { name = "Meepzorp Team" }
]
description = "Creative Director agent for managing creative projects and content"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 